--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wake Lock</title>
+    <title>Wake Lock - Keep your screen always on.</title>
+    <meta name="description" content="Simplest script to keep you screen always on. I know you can modify it on your SO configuration, but you can avoid changing configuration after each use.">
+    <meta name="keywords" content="wake, lock, screen, always, online">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
